--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "sandbox": "node --import tsx src/test.ts"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5"
+  },
+  "dependencies": {
+    "tsx": "^4.19.2"
   }
 }
