--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "target": "es6",
     "module": "esnext",
     "strict": true,
@@ -16,7 +17,7 @@
       ]
     },
     "lib": [
-      "esnext",
+      "esnext"
     ]
   },
   "exclude": [
